# SOFT

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
inc/glad/: glad.h
src/: common.h  game.cpp  game.hpp  input.c  input.h  util.c  util.h  window.c  window.h
src/gl/: shader.c  shader.h
src/window/: window.cpp  window.hpp
